testsuite/poke.pkl/computed-diag-1.pk
/* { dg-do compile } */

/* Endianness specifiers are not allowed in computed fields.  */

type Foo =
  struct
  {
    int i;
    big computed int j; /* { dg-error "" } */
  };
